# ccnubox_rn

./: .commitlintrc.js  .easignore  .env  .env.example  .eslintignore  .eslintrc.js  .gitignore  .npmrc  .prettierignore  .prettierrc  AGENTS.md  README.md  app.config.ts  app.json  bash.exe.stackdump  eas.json  eslint.config.mjs  index.harmony.js  index.js  lint-staged.config.js  metro.config.js  metro.harmony.config.js  package-lock.json  package.json  plugin.js  pnpm-lock.yaml  pnpm-workspace.yaml  react-native.config.js  tailwind.config.js  tsconfig.json
.eas/.env/: AGCONNECT_SERVICES_JSON
.expo-harmony/: manifest.json  signing.local.example.json  toolkit-config.json
.github/workflow/: build.yml  require-specific-reviewers.yml
.github/workflows/: build.yml  build_andorid.yml  build_ios.yml  lint_and_format_check.yml  test_update.yml
.husky/: commit-msg  pre-commit
android/: .gitignore  build.gradle  gradle.properties  gradlew  keystore.properties  keystore.properties.example  settings.gradle
android/app/: agconnect-services.json  (+3 more)
app/: _layout.tsx  index.tsx  login.tsx  webview.tsx
components/: ExternalLink.tsx
constants/: courseTable.ts  courseTableApplications.ts  courseTableApplications.tsx  mainPageApplications.ts  mainPageApplications.tsx  notificationItem.ts  prelogin.tsx  scraper.ts  settingItem.tsx  tabBar.ts  tabBar.tsx
docs/: TYPE_SYSTEM.md  TYPE_SYSTEM_MIGRATION.md  TYPE_SYSTEM_REFACTOR.md  TYPE_SYSTEM_SUMMARY.md  permissions.md
eas-hooks/: eas-build-pre-install.sh
harmony/: README.md  build-profile.json5  codelinter.json  oh-package.json5
harmony/entry/src/main/cpp/: CMakeLists.txt  PackageProvider.cpp  RNOHPackagesFactory.h  autolinking.cmake
harmony/entry/src/main/cpp/expoHarmony/: ExpoHarmonyPackage.h
hooks/: index.ts  useJPush.ts  useKeyboardShow.ts  useNotification.ts  useThemeChangeStyle.ts
ios/: Podfile  Podfile.properties.json  sentry.properties
ios_副本/: Podfile
languages/: en-US.json  zh-CN.json
mock/: config.js  server.js
mocks/: server.js
patches/: @bacons__apple-targets@4.0.6.patch  @bacons__apple-targets@4.0.7.patch  mx-jpush-expo@1.2.5.patch
plugins/: config-android-url-scheme.js  ios-disable-liquid-glass.js  remove-unused-ios-permissions.js
request/: api.ts  fetch.ts  interceptor.ts  request.ts  schema.d.ts  schema.ts
scripts/: genapi.js  prebuild.js  reset-project.js
secret/: ccnu-coursetable-firebase-adminsdk-hjadd-d099dd5b33.json  google-services.json
store/: currentRequests.ts  events.ts  portal.ts  scraper.ts  themeBasedComponents.ts  types.ts  visualScheme.ts  weekStore.ts
styles/: base.ts  common.ts  default.ts  index.ts  types.ts
themeBasedComponents/: index.ts  type.ts
types/: FeedIconTypes.ts  image.d.ts  mainPageGridTypes.ts  settingItem.ts  tabBarTypes.ts
utils/: api.ts  autoKey.ts  eventBus.ts  fetchUpdate.ts  fetchUpdates.ts  geneStyleSheet.ts  generateStyleSheet.ts  getCurrentTime.ts  index.ts  percent2px.ts
(+637 files in other folders)
